# c_programs

./: .gitignore  TEST
asembler/: script.sh  simple1.asm  simple2.asm  simple3.asm  test1.asm  test3.asm  test4.asm  test5.asm  test6.asm
bash/: info.sh
binary/: fifthgrade.ros  main  main.cpp
coreDumpQt/: main.cpp
functionAsParam/: main.cpp
integrity_control/: CMakeLists.txt  integrity_control.kdev4
integrity_control/.kdev4/: integrity_control.kdev4
integrity_control/src_lib/lib_integrity/: CMakeLists.txt
integrity_control/src_lib/lib_integrity/include/: lib_integrity_constants.h
integrity_control/src_lib/lib_integrity/src/: hashgenerator.cpp  tmainclass.cpp
linux_driver/1892XD4F/: Makefile  elvees_mcb03_bits.h  elvees_mcb03_regs.h  elvees_pci_public.h  elvees_pci_user.h  main.c  main.cpp  sull.c  sull.h
linux_driver/base/: Makefile  pe-uio.c
linux_driver/driver_linux_ioctl/: main.c  main.cpp
linux_driver/driver_linux_simple/: main.c
linux_driver/driver_scull/: .dd64.mod.cmd  .main.o.cmd  .sull.o.d
linux_driver/proc_read_write/: Makefile  main.c
linux_driver/scull_read_write/: main.c
linux_driver/ta1_pci/: Makefile  baseitem.h  def.h  main.c  main.h  sull.c  sull.h
mutex/mutex/: main
programs/archivator/: CMakeLists.txt
programs/archivator/src/: main.cpp
programs/chess/: CMakeLists.txt  pictures.qrc
programs/chess/include/: baseitem.h  controler.h  gui.h  logic.h
programs/chess/src/: controler.cpp  gui.cpp  logic.cpp  main.cpp
programs/chess/src/include/: tbaseitem.h  tcontroller.h  tgui.h  tlogic.h
programs/chess/src/src/: tcontroller.cpp  tgui.cpp  tlogic.cpp
programs/file_transport/src/server/: CMakeLists.txt
programs/file_transport/src/server/src/: main.cpp
programs/ftp_server/: CMakeLists.txt
programs/ftp_server/sftp/src/client/: CMakeLists.txt
programs/ftp_server/sftp/src_lib/lib_ftp_server/: CMakeLists.txt
programs/ftp_server/sftp/src_lib/lib_ftp_server/include/: lib_ftp_constants.h  tlogic.h  tserveriface.h  tsocket.h
programs/ftp_server/sftp/src_lib/lib_ftp_server/src/: tlogic.cpp  tserveriface.cpp
programs/ftp_server/src/client/: CMakeLists.txt
programs/ftp_server/src/client/src/: main.cpp
programs/ftp_server/src/server/src/: main.cpp
programs/ftp_server/src_lib/lib_ftp_server/: CMakeLists.txt
programs/ftp_server/src_lib/lib_ftp_server/include/: lib_ftp_constants.h  tlogic.h  tsocket.h
programs/ftp_server/src_lib/lib_ftp_server/src/: tlogic.cpp  tsocket.cpp
programs/http_server/: CMakeLists.txt
programs/http_server/include/: instruments.h  tprocess.h
programs/http_server/resorces/: index.css
programs/http_server/resorces/certificates/: shc-cert.pem  shc-key.pem
programs/http_server/src/: instruments.cpp  main.cpp  tprocess.cpp
programs/http_server/src/ic_unit/: CMakeLists.txt
programs/http_server/src/ic_unit/include/: defines_ic.hpp
programs/http_server/src/ic_unit/src/: main.cpp
programs/integrity_control/: CMakeLists.txt
programs/integrity_control/cmake/externModules/: AddCxxTest.cmake  AddRpcgenFiles.cmake  Check64BitArch.cmake  FindLibNetSnmp.cmake  FindLibYate.cmake  FindQwt.cmake  IncludeLibKtv.cmake  IncludeLibKtvComm.cmake  IncludeOurQwt613.cmake  SetQt3Mcbc14.cmake
programs/integrity_control/src/ic_unit/src/: main.cpp
programs/integrity_control/src_lib/lib_integrity/: CMakeLists.txt
programs/integrity_control/src_lib/lib_integrity/include/: hashgenerator.h  tbuffer.h  teventsinface.h  tmainclass.h
programs/integrity_control/src_lib/lib_integrity/src/: hashgenerator.cpp  tbuffer.cpp
programs/mkio/: CMakeLists.txt
programs/mkio/include/: baseitem.h  tbinaryspinbox.h  tbitepanel.h  tcontroller.h  thexspinbox.h  tlogic.h  tmainwindow.h  toctalspinbox.h
programs/mkio/info/: cmake_old  Утстановка
programs/mkio/src/: main.cpp  tbinaryspinbox.cpp  tbitepanel.cpp  tcontroller.cpp  thexspinbox.cpp  tlogic.cpp  tmainwindow.cpp  toctalspinbox.cpp
programs/neuralNetwork/: CMakeLists.txt
programs/neuralNetwork/src/src/: main.cpp
programs/package/: CMakeLists.txt
programs/package/src/pack/: CMakeLists.txt
programs/package/src/pack/src/: main.cpp
programs/package/src/unpack/: CMakeLists.txt
programs/package/src_lib/lib_pack/: CMakeLists.txt
programs/package/src_lib/lib_pack/include/: lib_protocol_constants.h
programs/protocol_tcp/src_lib/lib_protocol/: CMakeLists.txt
programs/protocol_tcp/src_lib/lib_protocol/include/: tmaneger.h  tmessageprocess.h
programs/protocol_tcp/src_lib/lib_protocol/src/: tmaneger.cpp  tmessageprocess.cpp
programs/protocol_utp/src/ic_unit/: CMakeLists.txt
programs/protocol_utp/src/ic_unit/src/: main.cpp
programs/sea_battle/: CMakeLists.txt
programs/sea_battle/.kdev4/: sea_battle.kdev4
programs/sea_battle/src/include/: cell.h  constants.h  controller.h
programs/sea_battle/src/src/: pipconnectplayers.cpp  ship.cpp
programs/snake/: CMakeLists.txt
programs/snake/src/include/: tbaseitem.h  tlogic.h
programs/snake/src/src/: main.cpp  tgui.cpp  tlogic.cpp
programs/space/: CMakeLists.txt
programs/space/src/include/: tbaseitem.h
programs/space/src/src/: main.cpp
programs/terminal_snake/: CMakeLists.txt
programs/terminal_snake/include/: baseitem.h
programs/terminal_snake/src/: main.cpp
programs/tetris/: CMakeLists.txt
programs/tetris/src/basic/include/: tbaseitem.h  tcontroller.h  tlogic.h
programs/tetris/src/basic/src/: tcontroller.cpp  tgui.cpp  tlogic.cpp
programs/tetris/src/figures/include/: figure.h  jfigure.h
programs/tetris/src/figures/src/: figure.cpp  jfigure.cpp
ruby/: main.rb
sea_battle/: CMakeLists.txt  sea_battle.kdev4
sea_battle/src/include/: cell.h  constants.h  controller.h  logic.h  maingui.h  pipconnectplayers.h  ship.h
sea_battle/src/src/: cell.cpp  controller.cpp  logic.cpp  main.cpp  maingui.cpp
simple programs/user_no_gui/: CMakeLists.txt  debGenerate.cmake
simple programs/user_no_gui/include/: tmainwindow.h
simple programs/user_no_gui/package/: postinst  postrm  preinst  profile
simple programs/user_no_gui/src/: main.cpp  tmainwindow.cpp
thread/: main.cpp
(+325 files in other folders)
