cmake_minimum_required(VERSION 3.16)
set (PROGRAM_NAME chess)
project(${PROGRAM_NAME} VERSION 1.0.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)

find_package(Qt6 COMPONENTS Widgets REQUIRED)
set(HEADERS_DIRECTORY ${CMAKE_SOURCE_DIR}/src/include)
set(SOURCES_DIRECTORY ${CMAKE_SOURCE_DIR}/src/src)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
set(RECURSES ${CMAKE_SOURCE_DIR}/pictures.qrc)
include_directories(${Qt6Widgets_INCLUDE_DIRS} ${Qt6Core_INCLUDE_DIRS} ${SOURCES_DIRECTORY} ${HEADERS_DIRECTORY})

set(HEADERS
   ${HEADERS_DIRECTORY}/tbaseitem.h
   ${HEADERS_DIRECTORY}/tgui.h
   ${HEADERS_DIRECTORY}/tcontroller.h
   ${HEADERS_DIRECTORY}/tlogic.h
)

set(SOURCES
   ${SOURCES_DIRECTORY}/main.cpp
   ${SOURCES_DIRECTORY}/tgui.cpp
   ${SOURCES_DIRECTORY}/tcontroller.cpp
   ${SOURCES_DIRECTORY}/tlogic.cpp
)
add_executable(${PROGRAM_NAME} ${HEADERS} ${SOURCES} ${RECURSES})
target_link_libraries(${PROGRAM_NAME} PRIVATE Qt6::Widgets)

