cmake_minimum_required(VERSION 3.16)
set (PROGRAM_NAME snake)
project(${PROGRAM_NAME} VERSION 1.0.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)

find_package(Qt5 COMPONENTS Widgets REQUIRED)
set(HEADERS_DIRECTORY ${CMAKE_SOURCE_DIR}/src/include)
set(SOURCES_DIRECTORY ${CMAKE_SOURCE_DIR}/src/src)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
include_directories(${Qt5Widgets_INCLUDE_DIRS} ${Qt5Core_INCLUDE_DIRS} ${SOURCES_DIRECTORY} ${HEADERS_DIRECTORY})
SET(CMAKE_CXX_FLAGS "-pthread")

set(HEADERS
   ${HEADERS_DIRECTORY}/tbaseitem.h
   ${HEADERS_DIRECTORY}/tgui.h
   ${HEADERS_DIRECTORY}/tcontroller.h
   ${HEADERS_DIRECTORY}/tlogic.h
)

set(SOURCES
   ${SOURCES_DIRECTORY}/main.cpp
   ${SOURCES_DIRECTORY}/tgui.cpp
   ${SOURCES_DIRECTORY}/tcontroller.cpp
   ${SOURCES_DIRECTORY}/tlogic.cpp
)
add_executable(${PROGRAM_NAME} ${HEADERS} ${SOURCES})
target_link_libraries(${PROGRAM_NAME} PRIVATE Qt5::Widgets)

