cmake_minimum_required(VERSION 3.16)
set (PROGRAM_NAME tetris)
project(${PROGRAM_NAME} VERSION 1.0.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)

find_package(Qt5 COMPONENTS Widgets REQUIRED)
set(HEADERS_DIRECTORY_BASE ${CMAKE_SOURCE_DIR}/src/basic/include)
set(SOURCES_DIRECTORY_BASE ${CMAKE_SOURCE_DIR}/src/basic/src)
set(HEADERS_DIRECTORY_FIGURE ${CMAKE_SOURCE_DIR}/src/figures/include)
set(SOURCES_DIRECTORY_FIGURE ${CMAKE_SOURCE_DIR}/src/figures/src)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
include_directories(${Qt5Widgets_INCLUDE_DIRS} ${Qt5Core_INCLUDE_DIRS} ${SOURCES_DIRECTORY_BASE} ${HEADERS_DIRECTORY_BASE} ${SOURCES_DIRECTORY_FIGURE} ${HEADERS_DIRECTORY_FIGURE})
SET(CMAKE_CXX_FLAGS "-pthread")

set(HEADERS
   ${HEADERS_DIRECTORY_BASE}/tbaseitem.h
   ${HEADERS_DIRECTORY_BASE}/tgui.h
   ${HEADERS_DIRECTORY_BASE}/tcontroller.h
   ${HEADERS_DIRECTORY_BASE}/tlogic.h
   ${HEADERS_DIRECTORY_FIGURE}/figure.h
   ${HEADERS_DIRECTORY_FIGURE}/jfigure.h
)

set(SOURCES
   ${SOURCES_DIRECTORY_BASE}/main.cpp
   ${SOURCES_DIRECTORY_BASE}/tgui.cpp
   ${SOURCES_DIRECTORY_BASE}/tcontroller.cpp
   ${SOURCES_DIRECTORY_BASE}/tlogic.cpp
   ${SOURCES_DIRECTORY_FIGURE}/figure.cpp
   ${SOURCES_DIRECTORY_FIGURE}/jfigure.cpp
)
add_executable(${PROGRAM_NAME} ${HEADERS} ${SOURCES})
target_link_libraries(${PROGRAM_NAME} PRIVATE Qt5::Widgets)

